# sdd-demo

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.specify/memory/: complexity-budget.md  constitution.md
claude-speckit-template/: .gitignore  CLAUDE.md  README.md  pyproject.toml
claude-speckit-template/.claude/commands/: speckit.implement.md
claude-speckit-template/.specify/memory/: project-tracker.md
claude-speckit-template/.specify/memory/lessons-learned/: README.md
claude-speckit-template/specs/001-payment-cli-simulator/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
claude-speckit-template/specs/001-payment-cli-simulator/contracts/: cli-interface.md
claude-speckit-template/src/: main.py
claude-speckit-template/src/cli/: __init__.py  display.py  prompts.py
claude-speckit-template/src/models/: __init__.py  card.py  response.py  transaction.py
claude-speckit-template/src/services/: history.py  processor.py
claude-speckit-template/tests/: __init__.py  conftest.py
claude-speckit-template/tests/integration/: test_payment_flow.py
claude-speckit-template/tests/unit/: test_history.py  test_validator.py
specs/001-payment-cli-simulator/: research.md
specs/001-payment-cli-simulator/checklists/: requirements.md
src/: __init__.py
src/services/: __init__.py  validator.py
tests/unit/: test_processor.py
